...
            android:id="@+id/playerNamesGroupScrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/playerNamesGroup" >
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
...

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start game"
                android:onClick="onClickStartBtn"
                android:id="@+id/startGameBtn"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
...
